--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 }
