--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.co.powerusers.vegfesta">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/vficon"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -31,7 +28,8 @@
             android:label="@string/register_activity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".AddressActivity" />
-        <activity android:name=".ConfirmActivity" />
+        <activity android:name=".ConfirmActivity"
+            android:label="@string/title_activity_confirm"/>
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme">
