--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="false">
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
@@ -26,10 +28,13 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/register_activity" />
-        <activity android:name=".CartActivity" />
-        <activity android:name=".AddressActivity" />
+        <activity android:name=".CartActivity"
+            android:parentActivityName=".HomeActivity"/>
+        <activity android:name=".AddressActivity"
+            android:parentActivityName=".HomeActivity"/>
         <activity android:name=".ConfirmActivity"
-            android:label="@string/title_activity_confirm"/>
+            android:label="@string/title_activity_confirm"
+            android:parentActivityName=".HomeActivity"/>
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme">
@@ -39,7 +44,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".OrderActivity"
+            android:parentActivityName=".HomeActivity"></activity>
     </application>
 
 </manifest>
